--- a/client/src/css/MainHeader.css
+++ b/client/src/css/MainHeader.css
@@ -11,6 +11,10 @@
     height: 5vh;
 }
 
+a {
+    color: #A2D2FF;
+}
+
 /* MainMenuHeaderRow.js */
 .mainmenu-header {
     background-color: #A2D2FF;
